# paddlepaddle-stubs

./: .editorconfig  .flake8  .prettierignore  README.md  justfile  pyproject.toml
.github/workflows/: lint-and-fmt.yml  unit-test.yml
examples/: jit_example.py  justfile  mnist_example.py  nn_example.py  pyproject.toml
examples/examples/: __main__.py
moelib/: __init__.py  __main__.py
paddle-stubs/: _C_ops.pyi  __init__.pyi  _legacy_C_ops.pyi  _typing.pyi  batch.pyi  callbacks.pyi  check_import_scipy.pyi  common_ops_import.pyi  compat.pyi  fft.pyi  hub.pyi  linalg.pyi  regularizer.pyi  signal.pyi  sysconfig.pyi  version.pyi
paddle-stubs/_typing/: __init__.pyi  basic.pyi  device.pyi  dtype.pyi  layout.pyi  shape.pyi  tensor.pyi
paddle-stubs/amp/: __init__.pyi  auto_cast.pyi  grad_scaler.pyi
paddle-stubs/autograd/: __init__.pyi  backward_mode.pyi  functional.pyi  py_layer.pyi
paddle-stubs/base/: __init__.pyi  backward.pyi  communicator.pyi  compiler.pyi  data.pyi  data_feeder.pyi  default_scope_funcs.pyi  distribute_lookup_table.pyi  dygraph_utils.pyi  entry_attr.pyi  executor.pyi  generator.pyi  graphviz.pyi  input.pyi  install_check.pyi  io.pyi  ir.pyi  layer_helper.pyi  layer_helper_base.pyi  metrics.pyi  multiprocess_utils.pyi  net_drawer.pyi  op.pyi  parallel_executor.pyi  param_attr.pyi  profiler.pyi  reader.pyi  regularizer.pyi  trainer_factory.pyi  unique_name.pyi
paddle-stubs/base/contrib/: __init__.pyi  memory_usage_calc.pyi  op_frequence.pyi  optimizer.pyi
paddle-stubs/base/dataloader/: __init__.pyi  collate.pyi  worker.pyi
paddle-stubs/base/dygraph/: __init__.pyi  base.pyi  checkpoint.pyi  io.pyi  jit.pyi  layer_object_helper.pyi  learning_rate_scheduler.pyi  nn.pyi  parallel.pyi  parallel_helper.pyi  profiler.pyi  rnn.pyi  tracer.pyi  varbase_patch_methods.pyi
paddle-stubs/base/inference/: wrapper.pyi
paddle-stubs/base/layers/: control_flow.pyi  device.pyi  distributions.pyi  loss.pyi  math_op_patch.pyi  metric_op.pyi  nn.pyi  rnn.pyi  sequence_lod.pyi  tensor.pyi
paddle-stubs/base/transpiler/: __init__.pyi  distribute_transpiler.pyi  memory_optimization_transpiler.pyi
paddle-stubs/cost_model/: __init__.pyi  cost_model.pyi
paddle-stubs/dataset/: cifar.pyi  common.pyi  conll05.pyi  flowers.pyi  image.pyi  imdb.pyi  imikolov.pyi  mnist.pyi  movielens.pyi  uci_housing.pyi  voc2012.pyi  wmt14.pyi  wmt16.pyi
paddle-stubs/device/: __init__.pyi
paddle-stubs/device/cuda/: __init__.pyi  graphs.pyi  streams.pyi
paddle-stubs/distributed/: __init__.pyi  cloud_utils.pyi  collective.pyi  elastic.pyi  entry_attr.pyi  parallel.pyi  parallel_with_gloo.pyi  spawn.pyi  utils.pyi
paddle-stubs/distributed/auto_parallel/: __init__.pyi  cluster.pyi  completion.pyi  converter.pyi  cost_model.pyi  dist_attribute.pyi  dist_context.pyi  dist_loader.pyi  dist_op.pyi  dist_saver.pyi  dist_tensor.pyi  engine.pyi  graph.pyi  interface.pyi  mapper.pyi  parallelizer.pyi  partitioner.pyi  planner.pyi  process_group.pyi  process_mesh.pyi  reshard.pyi  utils.pyi
paddle-stubs/distribution/: __init__.pyi  beta.pyi  categorical.pyi  constraint.pyi  dirichlet.pyi  distribution.pyi  exponential_family.pyi  independent.pyi  kl.pyi  multinomial.pyi  normal.pyi  transform.pyi  transformed_distribution.pyi  uniform.pyi  variable.pyi
paddle-stubs/fluid/: __init__.pyi  average.pyi  backward.pyi  clip.pyi  communicator.pyi  compiler.pyi  core.pyi  data_feed_desc.pyi  data_feeder.pyi  dataset.pyi  debugger.pyi  device_worker.pyi  evaluator.pyi  executor.pyi  framework.pyi  generator.pyi  initializer.pyi  input.pyi  io.pyi  ir.pyi  layer_helper.pyi  layer_helper_base.pyi  lod_tensor.pyi  log_helper.pyi  memory_analysis.pyi  metrics.pyi  nets.pyi  optimizer.pyi  parallel_executor.pyi  param_attr.pyi  profiler.pyi  reader.pyi  trainer_desc.pyi  unique_name.pyi  variable_index.pyi  wrapped_decorator.pyi
paddle-stubs/framework/: __init__.pyi  dtype.pyi  framework.pyi  io.pyi  random.pyi
paddle-stubs/hapi/: __init__.pyi  callbacks.pyi  dynamic_flops.pyi  hub.pyi  logger.pyi  model.pyi  model_summary.pyi  progressbar.pyi  static_flops.pyi
paddle-stubs/incubate/: __init__.pyi  autotune.pyi
paddle-stubs/inference/: __init__.pyi
paddle-stubs/io/: __init__.pyi
paddle-stubs/jit/: __init__.pyi  api.pyi  translated_layer.pyi
paddle-stubs/metric/: __init__.pyi  metrics.pyi
paddle-stubs/nn/: __init__.pyi  clip.pyi  decode.pyi
paddle-stubs/onnx/: __init__.pyi  export.pyi
paddle-stubs/optimizer/: __init__.pyi  adadelta.pyi  adagrad.pyi  adam.pyi  adamax.pyi  adamw.pyi  lamb.pyi  lr.pyi  momentum.pyi  optimizer.pyi  rmsprop.pyi  sgd.pyi
paddle-stubs/pir/: __init__.pyi  core.pyi  math_op_patch.py
paddle-stubs/profiler/: __init__.pyi  profiler.pyi  profiler_statistic.pyi  statistic_helper.pyi  timer.pyi  utils.pyi
paddle-stubs/proto/: __init__.pyi
paddle-stubs/reader/: __init__.pyi  decorator.pyi
paddle-stubs/sparse/: __init__.pyi  creation.pyi
paddle-stubs/static/: __init__.pyi  input.pyi  io.pyi
paddle-stubs/tensor/: __init__.pyi  array.pyi  attribute.pyi  creation.pyi  einsum.pyi  linalg.pyi  logic.pyi  manipulation.pyi  math.pyi  random.pyi  search.pyi  stat.pyi  to_string.pyi
paddle-stubs/text/: __init__.pyi  viterbi_decode.pyi
paddle-stubs/utils/: __init__.pyi  deprecated.pyi  dlpack.pyi  download.pyi  image_util.pyi  install_check.pyi  layer_utils.pyi  lazy_import.pyi  op_version.pyi  profiler.pyi  unique_name.pyi
paddle-stubs/vision/: __init__.pyi  image.pyi  ops.pyi
tests/: __init__.py  test_Model.py  test_Tensor.py  test_hub.py  test_jit.py  test_linalg.py  test_moelib.py  test_regularizer.py  test_signal.py  test_sysconfig.py  test_version.py
tests/test_linalg/: test_cholesky.py
tests/test_nn/: test_Layer.py  test_initializer.py
tests/test_optimizer/: test_lr.py  test_optimizer.py
tests/test_tensor/: test_einsum.py
(+516 files in other folders)
