[tool.poetry]
name = "paddlepaddle-stubs"
version = "2.5.0-alpha.2"
description = ""
authors = ["Nyakku Shigure <sigure.qaq@gmail.com>"]
packages = [{ include = "paddle-stubs/**/*.pyi" }]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cattidea/paddlepaddle-stubs"
repository = "https://github.com/cattidea/paddlepaddle-stubs"
keywords = ["PEP 561", "PEP 484", "Type Hints", "PaddlePaddle"]
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
typing-extensions = "^4.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pyright = "^1.1.317"
Pillow = "^10.0.0"
numpy = "1.24.3"
paddlepaddle = "^2.5.0"
ruff = "^0.0.278"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
add_imports = ["from __future__ import annotations"]
skip = ["setup.py", ".venv"]

[tool.pyright]
include = ["paddle-stubs", "tests"]
ignore = ["paddle-stubs/fluid"]
pythonVersion = "3.8"
typeCheckingMode = "strict"
reportMissingModuleSource = false

[tool.ruff]
include = ["paddle-stubs/**.pyi", "tests/**.pyi"]
select = ["PYI", "UP"]
target-version = "py38"
ignore = ["PYI029", "PYI044"]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
