[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["SigureMo <sigure.qaq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
paddlepaddle = "^2.3.1"
paddlepaddle-stubs = { path = ".." }

[tool.poetry.group.dev.dependencies]
black = "^22.1"
isort = "^5.10.1"
pyright = "^1.1.263"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
add_imports = ["from __future__ import annotations"]
skip = ["setup.py", ".venv"]

[tool.poetry.scripts]
example = "examples.__main__:main"

[build-system]
requires = ["poetry-core>=1.1.0b3"]
build-backend = "poetry.core.masonry.api"
